--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,74 +1,77 @@
 body {
     background: black;
     color: white;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+    background: url('../images/background.jpg');
 }
-img {
-    float: left;
+#planet-row {
+    text-align: center;
+    position: absolute;
+    top: 30%;
 }
-.container {
+/* .container {
     position: absolute;
     top: 200px;
     left: 175px;
-}
+} */
 #sun {
-    height: 200px;
-    width: 230px;
-    position: relative;
+    height: 250px;
+    width: 280px;
+    /* position: relative; */
     top: 50px;
 }
 #mercury {
-    height: 50px;
-    width: 50px;
-    position: relative;
+    height: 70px;
+    width: 70px;
+    /* position: relative; */
     top: 120px;
 }
 #venus {
-    height: 80px;
-    width: 80px;
-    position: relative;
+    height: 100px;
+    width: 100px;
+    /* position: relative; */
     top: 100px;
 }
 #earth {
-    height: 97px;
-    width: 100px;
-    position: relative;
+    height: 117px;
+    width: 120px;
+    /* position: relative; */
     top: 90px;
 }
 #mars {
-    height: 70px;
-    width: 70px;
-    position: relative;
+    height: 90px;
+    width: 90px;
+    /* position: relative; */
     top: 105px;
 }
 #jupiter {
-    height: 150px;
-    width: 150px;
-    position: relative;
+    height: 170px;
+    width: 170px;
+    /* position: relative; */
     top: 65px;
 }
 #saturn {
-    height: 125px;
-    width: 150px;
-    position: relative;
+    height: 145px;
+    width: 170px;
+    /* position: relative; */
     top: 80px;
 }
 #uranus {
-    height: 100px;
-    width: 100px;
-    position: relative;
+    height: 120px;
+    width: 120px;
+    /* position: relative; */
     top: 95px;
 }
 #neptune {
-    height: 95px;
-    width: 95px;
-    position: relative;
+    height: 115px;
+    width: 115px;
+    /* position: relative; */
     top: 95px;
 }
 #pluto {
-    height: 38px;
-    width: 40px;
-    position: relative;
+    height: 58px;
+    width: 60px;
+    /* position: relative; */
     top: 120px;
 }
