--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,25 @@
+#classModal {}
+
+.modal-body {
+  overflow-x: auto;
+}
+#visitor {
+    margin: 0 auto;
+    display: block;
+}
+#picture-of-day {
+    position: fixed;
+    bottom: 0;
+}
+td {
+    color: black;
+}
+th {
+    color: black;
+}
 body {
     background: url('../images/background.jpg');
-    color: white;
+    color: blue;
     margin-left: 0 auto;
     margin-right: 0 auto; 
 }
@@ -45,7 +64,7 @@ img {
 span {
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
-    color: yellow;
+    color: red;
 }
 /* table {
     display: none;
@@ -55,6 +74,10 @@ span {
     bottom: 0;
     right: 0;
 } */
+#pic-of-day {
+    height: 200px;
+    width: 300px;
+}
 #planet-row {
     text-align: center;
     position: absolute;
