--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,5 @@
-#classModal {}
-
-.modal-body {
-  overflow-x: auto;
-}
-#visitor {
-    margin: 0 auto;
-    display: block;
-}
-#picture-of-day {
-    position: fixed;
-    bottom: 0;
-}
-td {
-    color: black;
-}
-th {
-    color: black;
-}
 body {
     background: url('../images/background.jpg');
-    color: blue;
     margin-left: 0 auto;
     margin-right: 0 auto; 
 }
@@ -35,13 +15,31 @@ p {
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
     color: lightskyblue;
+    margin: 10px 10px 20px 10px;
 }
 h2 {
     font-family: 'Monoton', cursive;
+    color: royalblue;
+}
+h4 {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 22px;
+}
+th {
+    color: lime;
+    font-family: 'Roboto Mono', monospace;
+    padding-right: 20px;
+}
+td {
     color: lightskyblue;
 }
 div {
     margin-bottom: 10px;
+}
+span {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 16px;
+    color: red;
 }
 button {
     margin: 0 auto;
@@ -51,37 +49,66 @@ button {
     font-family: 'Roboto Mono', monospace;
     padding: 5px 10px 5px 10px;
 }
-input {
-    margin: 0 auto;
-    display: block;
-}
-th {
-    padding-right: 20px;
-}
 img {
     margin: 0px 3px 0px 3px;
 }
-span {
-    font-family: 'Roboto Mono', monospace;
-    font-size: 18px;
-    color: red;
+.modal-body {
+    overflow-x: auto;
 }
-/* table {
-    display: none;
-} */
-/* #input-fields {
+.modal-content {
+    background-color: lightgrey;
+}
+#visitor {
+    margin: 0 auto;
+    display: block;
+}
+#picture-of-day {
+    margin: 0 auto;
+    display: block;
+}
+#pic-caption {
+    font-family: 'Roboto Mono', monospace;
+}
+#name-input {
     position: fixed;
-    bottom: 0;
-    right: 0;
-} */
+    left: 50%;
+    bottom: 130px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 230px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 10px;
+}
+#age-input {
+    position: fixed;
+    left: 50%;
+    bottom: 80px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 230px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 10px;
+}
+#visitor {
+    position: fixed;
+    left: 50%;
+    bottom: 15px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+}
 #pic-of-day {
-    height: 200px;
-    width: 300px;
+    height: 500px;
+    width: 700px;
+    margin: 0 auto;
+    display: block;
+    padding: 10px;
 }
 #planet-row {
     text-align: center;
     position: absolute;
-    top: 30%;
+    top: 35%;
 }
 #data-cards {
     position: absolute;
