--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,3 +212,11 @@ figcaption {
 .grow:hover {
     transform: scale(1.1);
 }
+#chart,
+#sunChart,
+#plutoChart {
+    margin: 0 auto;
+    padding-bottom: 20px;
+}
+
+/* Need to add responsiveness (media queries)
